--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           <div class="card-body">
             <h5 class="card-title text-center">JUARA 1.</h5>
             <p class="card-text text-center">LOMBA KAMPUNG LITERASI</p>
-            <a href="#" class="btn btn-dark d-block">MARI KITA LIHAT</a>
+            <a href="/juaraa/" class="btn btn-dark d-block">MARI KITA LIHAT</a>
           </div>
             <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-success text-dark">
               🏆1
@@ -114,7 +114,7 @@
           <div class="card-body">
             <h5 class="card-title text-center">JUARA 1..</h5>
             <p class="card-text text-center">LOMBA DAUR ULANG</p>
-            <a href="#" class="btn btn-dark d-block">MARI KITA LIHAT</a>
+            <a href="/juarab/" class="btn btn-dark d-block">MARI KITA LIHAT</a>
           </div>
           <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger text-dark">
             🏆1
@@ -126,7 +126,7 @@
           <div class="card-body">
             <h5 class="card-title text-center">JUARA 1...</h5>
             <p class="card-text text-center">LOMBA MADING</p>
-            <a href="#" class="btn btn-dark d-block">MARI KITA LIHAT</a>
+            <a href="/juarac/" class="btn btn-dark d-block">MARI KITA LIHAT</a>
           </div>
           <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-warning text-dark">
             🏆1
